--- a/analysis/runs/prepareInputFiles.ipynb
+++ b/analysis/runs/prepareInputFiles.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,29 +69,34 @@
      "output_type": "stream",
      "text": [
       "master file: \n",
-      " /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00017.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00018.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00019.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00020.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00022.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00034.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00035.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00038.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00044.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00045.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00046.hdf5\n",
-      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00047.hdf5\n",
-      "outdir: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/\n",
-      "tile path: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles\n"
+      " /data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00000.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00002.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00256.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00257.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00259.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00260.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00261.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00262.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00263.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00269.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00271.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00272.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00273.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00274.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00275.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00276.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00277.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00278.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00279.hdf5\n",
+      "outdir: /data/des61.a/data/johnny/DESY3/data/cutouts/\n",
+      "tile path: /data/des61.a/data/johnny/DESY3/data/cutouts/tiles\n"
      ]
     }
    ],
    "source": [
-    "root = '/home/s1/jesteves/git/buzzardAnalysis/mainAnalysis/'\n",
-    "cfg  = root+'config_buzzard_v2.yaml'\n",
-    "copa = copacabana(cfg,dataset='buzzard_v2')"
+    "root = '/data/des61.a/data/johnny/DESY3/projects/CopacabanaRuns/analysis/'\n",
+    "cfg  = root+'config_desy3_rm.yaml'\n",
+    "copa = copacabana(cfg,dataset='des')"
    ]
   },
   {
@@ -124,13 +129,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#copa.make_input_file()"
+    "copa.make_input_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00279.hdf5: unable to open file\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!h5ls /data/des61.a/data/johnny/DESY3/data/cutouts/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00279.hdf5"
    ]
   },
   {
@@ -142,37 +178,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clusters                 Group\r\n",
-      "members                  Group\r\n"
+      "main       **NOT FOUND** "
      ]
     }
    ],
    "source": [
-    "!h5ls /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CID                      Dataset {424}\r\n",
-      "DA                       Dataset {424}\r\n",
-      "DEC                      Dataset {424}\r\n",
-      "M200_true                Dataset {424}\r\n",
-      "R200_true                Dataset {424}\r\n",
-      "RA                       Dataset {424}\r\n",
-      "magLim                   Dataset {424, 3}\r\n",
-      "redshift                 Dataset {424}\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!h5ls /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5/clusters/main"
+    "!h5ls /data/des61.a/data/johnny/DESY3/data/cutouts/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_hpx8_00279.hdf5/clusters/main"
    ]
   },
   {
