--- a/selection/notebooks/photozValidation.ipynb
+++ b/selection/notebooks/photozValidation.ipynb
@@ -554,6 +554,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1308,6 +1315,148 @@
    "source": [
     "!cat ../../analysis/aux_files/modelDNF_correction_z_gold_2_2.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check Photoz Sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/cvmfs/des.opensciencegrid.org/fnal/anaconda2/envs/des18a/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
+   "source": [
+    "#infile = '/data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00256.hdf5'\n",
+    "import h5py\n",
+    "\n",
+    "path   = '/data/des81.b/data/mariaeli/y3_cats/subsampled/'\n",
+    "fname  = path+'Y3_GOLD_2_2.1_subsampled.h5'\n",
+    "master = h5py.File(fname,'r')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_h5_group(name,node):\n",
+    "    ''' show all the h5 groups\n",
+    "    Example:\n",
+    "    fmaster = h5py.File(copa.master_fname,'r')\n",
+    "    fmaster.visititems(show_h5_group)\n",
+    "\n",
+    "    ## https://stackoverflow.com/questions/45562169/traverse-hdf5-file-tree-and-continue-after-return\n",
+    "    '''\n",
+    "    if isinstance(node, h5py.Group):\n",
+    "        print(name,node)\n",
+    "    return None\n",
+    "\n",
+    "def show_h5_dataset(name,node):\n",
+    "    if isinstance(node, h5py.Dataset):\n",
+    "        print(name,node)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'catalog/gold/a_sed_sfd98_g', <HDF5 dataset \"a_sed_sfd98_g\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/a_sed_sfd98_i', <HDF5 dataset \"a_sed_sfd98_i\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/a_sed_sfd98_r', <HDF5 dataset \"a_sed_sfd98_r\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/a_sed_sfd98_z', <HDF5 dataset \"a_sed_sfd98_z\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/coadd_object_id', <HDF5 dataset \"coadd_object_id\": shape (39926304,), type \">i8\">)\n",
+      "(u'catalog/gold/dec', <HDF5 dataset \"dec\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/delta_mag_chrom_g', <HDF5 dataset \"delta_mag_chrom_g\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_chrom_i', <HDF5 dataset \"delta_mag_chrom_i\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_chrom_r', <HDF5 dataset \"delta_mag_chrom_r\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_chrom_z', <HDF5 dataset \"delta_mag_chrom_z\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_y4_g', <HDF5 dataset \"delta_mag_y4_g\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_y4_i', <HDF5 dataset \"delta_mag_y4_i\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_y4_r', <HDF5 dataset \"delta_mag_y4_r\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/delta_mag_y4_z', <HDF5 dataset \"delta_mag_y4_z\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/ebv_sfd98', <HDF5 dataset \"ebv_sfd98\": shape (39926304,), type \">f4\">)\n",
+      "(u'catalog/gold/extended_class_mash_sof', <HDF5 dataset \"extended_class_mash_sof\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/flags', <HDF5 dataset \"flags\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/flags_badregions', <HDF5 dataset \"flags_badregions\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/flags_footprint', <HDF5 dataset \"flags_footprint\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/flags_foreground', <HDF5 dataset \"flags_foreground\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/flags_gold', <HDF5 dataset \"flags_gold\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/flags_phot', <HDF5 dataset \"flags_phot\": shape (39926304,), type \">i4\">)\n",
+      "(u'catalog/gold/hpix_16384', <HDF5 dataset \"hpix_16384\": shape (39926304,), type \">i8\">)\n",
+      "(u'catalog/gold/n_images_g', <HDF5 dataset \"n_images_g\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/n_images_i', <HDF5 dataset \"n_images_i\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/n_images_r', <HDF5 dataset \"n_images_r\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/n_images_z', <HDF5 dataset \"n_images_z\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/ra', <HDF5 dataset \"ra\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sextractor_flags_g', <HDF5 dataset \"sextractor_flags_g\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/sextractor_flags_i', <HDF5 dataset \"sextractor_flags_i\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/sextractor_flags_r', <HDF5 dataset \"sextractor_flags_r\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/sextractor_flags_z', <HDF5 dataset \"sextractor_flags_z\": shape (39926304,), type \">i2\">)\n",
+      "(u'catalog/gold/sof_cm_flux_corrected_g', <HDF5 dataset \"sof_cm_flux_corrected_g\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_corrected_i', <HDF5 dataset \"sof_cm_flux_corrected_i\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_corrected_r', <HDF5 dataset \"sof_cm_flux_corrected_r\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_corrected_z', <HDF5 dataset \"sof_cm_flux_corrected_z\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_err_g', <HDF5 dataset \"sof_cm_flux_err_g\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_err_i', <HDF5 dataset \"sof_cm_flux_err_i\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_err_r', <HDF5 dataset \"sof_cm_flux_err_r\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_flux_err_z', <HDF5 dataset \"sof_cm_flux_err_z\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_corrected_g', <HDF5 dataset \"sof_cm_mag_corrected_g\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_corrected_i', <HDF5 dataset \"sof_cm_mag_corrected_i\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_corrected_r', <HDF5 dataset \"sof_cm_mag_corrected_r\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_corrected_z', <HDF5 dataset \"sof_cm_mag_corrected_z\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_err_g', <HDF5 dataset \"sof_cm_mag_err_g\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_err_i', <HDF5 dataset \"sof_cm_mag_err_i\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_err_r', <HDF5 dataset \"sof_cm_mag_err_r\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_cm_mag_err_z', <HDF5 dataset \"sof_cm_mag_err_z\": shape (39926304,), type \">f8\">)\n",
+      "(u'catalog/gold/sof_flags', <HDF5 dataset \"sof_flags\": shape (39926304,), type \">i8\">)\n",
+      "(u'catalog/gold/tilename', <HDF5 dataset \"tilename\": shape (39926304,), type \"|S12\">)\n",
+      "(u'masks/gold/hpix', <HDF5 dataset \"hpix\": shape (2550145,), type \"<i8\">)\n"
+     ]
+    }
+   ],
+   "source": [
+    "master.visititems(show_h5_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
