--- a/analysis/runs/runCopa.ipynb
+++ b/analysis/runs/runCopa.ipynb
@@ -69,7 +69,7 @@
      "output_type": "stream",
      "text": [
       "master file: \n",
-      " /data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00000.hdf5\n",
+      " /data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00259.hdf5\n",
       "outdir: /data/des61.a/data/johnny/DESY3/data/output/\n",
       "tile path: /data/des61.a/data/johnny/DESY3/data/output/tiles\n"
      ]
@@ -123,12 +123,132 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "-------------------------\n",
+      "Starting BMA\n",
+      "divided in nchunks: 50\n",
+      "each tile divided in 50 chunks \n",
+      "\n",
+      "Healpixel: 00259\n",
+      "making bma cutout\n",
+      "sample size: 3674 \n",
+      "\n",
+      "temp files\n",
+      "Total Sample Size: 3674\n",
+      "input : ['/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_000.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_001.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_002.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_003.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_004.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_005.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_006.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_007.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_008.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_009.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_010.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_011.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_012.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_013.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_014.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_015.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_016.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_017.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_018.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_019.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_020.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_021.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_022.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_023.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_024.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_025.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_026.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_027.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_028.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_029.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_030.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_031.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_032.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_033.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_034.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_035.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_036.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_037.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_038.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_039.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_040.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_041.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_042.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_043.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_044.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_045.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_input_046.hdf5']\n",
+      "output: ['/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_000.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_001.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_002.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_003.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_004.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_005.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_006.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_007.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_008.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_009.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_010.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_011.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_012.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_013.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_014.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_015.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_016.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_017.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_018.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_019.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_020.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_021.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_022.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_023.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_024.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_025.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_026.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_027.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_028.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_029.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_030.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_031.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_032.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_033.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_034.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_035.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_036.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_037.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_038.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_039.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_040.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_041.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_042.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_043.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_044.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_045.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_046.hdf5']\n",
+      "bma parallel\n",
+      "starting parallel process\n",
+      "runing on the following batches: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49]\n",
+      "ended smass calc\n",
+      "stellarMass total time: 1.05 min \n",
+      "\n",
+      "wrapping up temp files\n",
+      "bma out files\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_047.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_048.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/all_output_049.hdf5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: output table doesnt match input table\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00259.hdf5 \n",
+      "\n",
+      "all files combined with success\n",
+      "removing temp files\n"
+     ]
+    }
+   ],
    "source": [
     "##### Atention: this cell takes more than 6 hours to run. It only needs to be run one time.\n",
     "\n",
-    "#copa.run_bma_healpix(nCores=60,overwrite=False)"
+    "copa.run_bma_healpix('all',nCores=60,overwrite=True,remove_temp_files=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dnf_model_rhod_02Lstar_test0 Dataset {1396}\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!h5ls /data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00262.hdf5/members/bma/indices/dnf_model_rhod_02Lstar_test0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "-------------------------\n",
+      "Starting BMA\n",
+      "divided in nchunks: 50\n",
+      "each tile divided in 50 chunks \n",
+      "\n",
+      "Healpixel: 00259\n",
+      "sample size: 92 \n",
+      "\n",
+      "temp files\n",
+      "Total Sample Size: 92\n",
+      "input : ['/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_input_047.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_input_048.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_input_049.hdf5']\n",
+      "output: ['/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_047.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_048.hdf5', '/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_049.hdf5']\n",
+      "bma parallel\n",
+      "starting parallel process\n",
+      "runing on the following batches: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49]\n",
+      "ended smass calc\n",
+      "stellarMass total time: 0.98 min \n",
+      "\n",
+      "wrapping up temp files\n",
+      "bma out files\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_047.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_048.hdf5\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_output_049.hdf5\n",
+      "Error: output table doesnt match input table\n",
+      "/data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00259.hdf5 \n",
+      "\n",
+      "all files combined with success\n",
+      "removing temp files\n"
+     ]
+    }
+   ],
+   "source": [
+    "copa.run_bma_healpix('dnf_model_rhod_02Lstar_test0',nCores=60,overwrite=False,remove_temp_files=True)"
    ]
   },
   {
@@ -147,10 +267,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = '/data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00262.hdf5'\n",
+    "mydict = read_hdf5_file_to_dict(fname,cols=['dnf_model_rhod_02Lstar_test0'], path='members/bma/indices/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dnf_model_rhod_02Lstar_test0': array([354793, 354794, 354820, ..., 669987, 669981, 669943])}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mydict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import numpy as np\n",
+    "def read_hdf5_file_to_dict(file,cols=None,indices=None,path='/'):\n",
+    "    hf = h5py.File(file, 'r')\n",
+    "    #hf.visititems(show_h5_group)\n",
+    "\n",
+    "    try:\n",
+    "        mygroup = hf[path]\n",
+    "    except:\n",
+    "        hf.visititems(show_h5_group)\n",
+    "        print('Error group not found: %s'%path)\n",
+    "        exit()\n",
+    "\n",
+    "    if cols is None: cols  = list(mygroup.keys())\n",
+    "    if indices is None: indices = np.arange(0,len(mygroup[cols[0]]),1,dtype=np.int64)\n",
+    "\n",
+    "    mydict= dict().fromkeys(cols)\n",
+    "    for col in cols:\n",
+    "        mydict[col] = np.array(mygroup[col][:][indices])    \n",
+    "    hf.close()\n",
+    "\n",
+    "    return mydict\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -218,18 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## setup \n",
+    "\n",
     "copa.kwargs['r_aper_model'] = 'rhod'\n",
     "copa.kwargs['mag_selection']= '02Lstar'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -263,7 +451,7 @@
       "\n",
       "Starting Copa\n",
       "run dnf_model_rhod_02Lstar_test0\n",
-      "master_file: /data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00000.hdf5\n",
+      "master_file: /data/des61.a/data/johnny/DESY3/data/output/tiles/y3_gold_2.2.1_wide_sofcol_run_redmapper_v6.4.22_wv1.2_subsampled_copa_v2.1_00259.hdf5\n",
       "loading clusters\n",
       "apply magnitude selection\n",
       "loading full members catalog\n",
@@ -271,13 +459,13 @@
       "selecting fake photo-z catalog\n",
       "making galaxies cut\n",
       "galaxy catalog\n",
-      "all:  3674700\n",
-      "cut:  2078405\n",
+      "all:  18014\n",
+      "cut:  11846\n",
       "assigning background galaxies\n",
       "computing physical quantities\n",
       "\n",
       "\n",
-      "tile file: /data/des61.a/data/johnny/DESY3/data/output/temp_file/00000/dnf_model_rhod_02Lstar_test0_copa_test_gal.fits\n",
+      "tile file: /data/des61.a/data/johnny/DESY3/data/output/temp_file/00259/dnf_model_rhod_02Lstar_test0_copa_test_gal.fits\n",
       "copa parallel process\n",
       "Geting Redshift Window\n",
       "Computing Galaxy Density\n",
@@ -291,15 +479,7 @@
       "--> Getting truth distributions\n",
       "Compute MaskFraction and Norm\n",
       "Pixelmap: None\n",
-      "look here!\n",
-      "norm less than zero: -0.11224137381606242\n",
-      "norm less than zero: -0.8910828285058184\n",
-      "norm less than zero: -3.1964924397575794\n",
-      "norm less than zero: -0.06506207555425171\n",
-      "norm less than zero: -0.40422763402806544\n",
-      "norm less than zero: -0.5638983544452997\n",
-      "norm less than zero: -0.09966834812488547\n",
-      "Sum maskfrac: 16.97\n",
+      "Sum maskfrac: 0.43\n",
       "\n",
       " Compute Probabilities\n"
      ]
@@ -310,16 +490,16 @@
      "text": [
       "/cvmfs/des.opensciencegrid.org/fnal/anaconda2/envs/des18a/lib/python2.7/site-packages/scipy/interpolate/interpolate.py:595: RuntimeWarning: invalid value encountered in true_divide\n",
       "  slope = (y_hi - y_lo) / (x_hi - x_lo)[:, None]\n",
-      "/home/s1/jesteves/git/ccopa/python/copac/assignProb.py:265: RuntimeWarning: invalid value encountered in divide\n",
-      "  return prod/(norm+eps)\n",
-      "/home/s1/jesteves/git/ccopa/python/copac/assignProb.py:263: RuntimeWarning: invalid value encountered in multiply\n",
-      "  prod = pdf1*pdf2\n"
+      "/home/s1/jesteves/git/ccopa/python/copac/assignProb.py:279: RuntimeWarning: invalid value encountered in divide\n",
+      "  return prod/(norm+eps)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error: prob. zero values\n",
+      "Error: prob. zero values\n",
       "Writing Output: Catalogs  \n",
       "\n",
       "Writing Galaxy Output\n",
@@ -329,9 +509,8 @@
       "\n",
       "end!\n",
       "compute ptaken\n",
-      "re-write\n",
-      "overwriting groups: members and clusters/copa/dnf_model_rhod_02Lstar_test0\n",
-      "Total time: 224.883817196s\n",
+      "Check Group: False\n",
+      "Total time: 2.93629693985s\n",
       "---------------\n",
       "\n",
       "\n"
